tests/pending/pos/cbproxy-default.scala
def f[S: Monad](
  initial: S.Self = S.unit // error
) =
  S.unit // works